<resources>
    <string name="app_name">LikeEat</string>

    <string name="add_review">맛집 추가</string>
    <string name="view_review">리뷰 보기</string>

    <string name="regist_new_place">신규맛집 등록</string>

    <string name="search_place_hint">매장명, 주소 검색</string>

    <string name="view_my_review_list">목록 보기</string>
    <string name="view_review_friend">맛집 보기(friend)</string>

    <string name="search_hint">이름, 주소, 태그 검색</string>

    <string name="share">공유</string>
    <string name="not_share">나만보기</string>
    <string name="category">카테고리</string>
    <string name="select_theme">테마 추가적용</string>
    <string name="move_theme">테마 이동</string>

    <string name="edit_comment_hint">#해시태그와 함께 평가를 남기세요</string>

    <string name="only_me_can_see">나만보기</string>

    <string name="visit_date">방문일</string>
    <string name="evaluation">총평</string>
    <string name="place_evaluation">맛집 총평</string>
    <string name="companion">누구랑</string>
    <string name="price">가격대</string>
    <string name="restroom">화장실</string>
    <string name="re_visit">재방문</string>

    <string name="regist_image">사진등록</string>

    <string name="search_filter_distance_by_location">현위치 기준 거리순</string>
    <string name="search_filter_distance_by_map">지도 기준 거리순</string>
    <string name="search_filter_match">정확도순</string>

    <string name="regist_this_place">이 맛집 기록하기</string>
    <string name="regist_place">맛집 등록하기</string>

    <string name="regist_theme">등록 테마</string>
    <string name="btn_regist_theme">테마 추가 적용</string>

    <string name="visit_record">방문기록</string>

    <string name="complete_select">선택완료</string>

    <!-- screen_title -->
    <string name="title_my_theme">나의 맛집 테마</string>
    <string name="title_add_new_theme">새로운 테마 추가</string>
    <string name="title_edit_theme">테마 수정</string>

    <!-- theme_update/delete -->
    <string name="delete_theme_title">알림</string>
    <string name="delete_theme_content">등록한 테마를 완전히 삭제합니다\n계속 하시겠습니까?</string>
    <string name="delete_review_content">등록한 맛집을 테마에서 제거합니다\n계속 하시겠습니까?</string>
    <string name="delete_theme_cancel">취소</string>
    <string name="delete_theme_ok">삭제</string>
    <string name="update_theme">수정하기</string>
    <string name="delete_theme">삭제하기</string>
    <string name="move_review_to_another_theme">테마이동</string>

    <!-- theme_resource -->
    <string name="review_count">num개의 맛집</string>
    <string name="add_new_theme">새로운 테마 등록</string>
    <string name="theme_name_title">테마 이름</string>
    <string name="theme_name_hint">띄어쓰기 포함 20자 이내로 입력해 주세요</string>
    <string name="theme_color_title">테마 색상</string>
    <string name="theme_add_review">테마에 맛집 추가</string>
    <string name="theme_set_public">테마 공개여부</string>
    <string name="theme_is_public">공유여부</string>
    <string name="theme_public_open">공개</string>
    <string name="theme_public_close">비공개</string>
    <string name="theme_enroll">등록하기</string>
    <string name="theme_all">등록한 모든 맛집 (기본)</string>

    <!-- menu -->
    <string name="menu_add_review">리뷰 추가</string>

    <!-- left_drawer -->
    <string name="enrolled_review">등록 맛집</string>
    <string name="friend">친구</string>
    <string name="now_selected_theme">현재 선택된 테마</string>
    <string name="all_themes">모든 테마</string>

    <string name="place_in_map">맛집 리스트</string>
    <string name="seek_more_place">더 많은 맛집 찾기</string>

    <string name="update">수정하기</string>
    <string name="delete">삭제하기</string>
    <string name="apply">적용하기</string>

    <string name="friends_list">친구 목록</string>
    <string name="search_name">이름 검색</string>
    <string name="favorite">즐겨찾기</string>
    <string name="all_friends">모든 친구</string>
    <string name="manage_friend">친구 관리</string>
    <string name="add_friend">친구 추가</string>
    <string name="add">추가하기</string>
    <string name="add_favorite">즐겨찾기 추가</string>
    <string name="add_visit_record">방문기록 등록하기</string>

    <string name="start_app">시작하기</string>
    <string name="login_title">라이킷과 함께\n즐거운 맛집 라이프</string>
    <string name="login_description">로그인 완료 시 라이킷 앱에 \'자동로그인\'됩니다.\n본인 기기가 아니거나 여러 사람이 사용 중인 기기인 경우 사용 후 [설정]에서 \'로그아웃\'해주세요.</string>

    <string name="loading_friend">이동중..</string>
    <string name="loading_friend_content">친구의 지도로\n이동하는 중입니다</string>

    <string name="on_boarding_title_first">간편한 <b>맛집등록</b></string>
    <string name="on_boarding_title_second">나만의 <b>테마분류</b></string>
    <string name="on_boarding_title_third">믿을수 있는 <b>친구의 맛집</b></string>
    <string name="on_boarding_description_first">라이크잇에서 간편하게\n맛집을 등록해보세요</string>
    <string name="on_boarding_description_second">내가 지정한 테마로\n맛집을 보기쉽게 분류하세요</string>
    <string name="on_boarding_description_third">라이크잇을 통해 믿을수 있는\n친구의 맛집목록을 확인하세요></string>

    <string name="setting">설정</string>
</resources>