<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="160dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/item_fill_white_round"
    android:paddingHorizontal="@dimen/padding_normal">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_half"
        android:gravity="center"
        android:text="@string/delete_theme_title"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintBottom_toTopOf="@id/seperator"
        android:gravity="center"
        android:text="@string/delete_theme_content"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@id/delete_theme_cancel"
        android:background="#dfdfdf"/>

    <TextView
        android:id="@+id/delete_theme_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_theme_cancel"
        android:textSize="@dimen/text_size_normal"
        android:gravity="center"
        android:paddingVertical="@dimen/padding_half"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_theme_ok"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/delete_theme_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_theme_ok"
        android:textSize="@dimen/text_size_normal"
        android:gravity="center"
        android:paddingVertical="@dimen/padding_half"
        app:layout_constraintBottom_toBottomOf="@id/delete_theme_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/delete_theme_cancel"
        app:layout_constraintTop_toTopOf="@id/delete_theme_cancel"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>